--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "files.associations": {
-        "CORROSPONDING MONTH .C": "cpp",
-        "DIVISIBILTY 3 OR 5.C": "cpp",
-        "EVEN ODD LESS THEN 500.C": "cpp",
-        "EVEN ODD.C": "cpp"
-    }
+    "cmake.configureOnOpen": false
 }
